RESOLVED FIXED89792
[chromium] WebKit API plumbing for applicationCache.abort()
https://bugs.webkit.org/show_bug.cgi?id=89792
Summary [chromium] WebKit API plumbing for applicationCache.abort()
Michael Nordman
Reported 2012-06-22 16:15:03 PDT
Attachments
appcacheAbort (1.85 KB, patch)
2012-06-22 16:18 PDT, Michael Nordman
no flags
Michael Nordman
Comment 1 2012-06-22 16:18:43 PDT
Created attachment 149131 [details] appcacheAbort
WebKit Review Bot
Comment 2 2012-06-22 16:22:06 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 3 2012-06-22 17:24:16 PDT
Comment on attachment 149131 [details] appcacheAbort Clearing flags on attachment: 149131 Committed r121078: <http://trac.webkit.org/changeset/121078>
WebKit Review Bot
Comment 4 2012-06-22 17:24:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.