[chromium] WebKit API plumbing for applicationCache.abort() https://bugs.webkit.org/show_bug.cgi?id=89792

Reviewed by Darin Fisher.

* public/WebApplicationCacheHost.h:
(WebKit::WebApplicationCacheHost::abort):
* src/ApplicationCacheHost.cpp:
(WebCore::ApplicationCacheHost::abort):


Canonical link: https://commits.webkit.org/107657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121078 268f45cc-cd09-0410-ab3c-d52691b4dbfc